# LightRAG

./: .dockerignore  .env.example  Dockerfile  SECRETS.md  docker-compose.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  linting.yaml  setup-secrets.yml
examples/: lightrag_ollama_demo.py
examples/unofficial-sample/: copy_llm_cache_to_another_storage.py  lightrag_llamaindex_direct_demo.py  lightrag_llamaindex_litellm_demo.py  lightrag_openai_neo4j_milvus_redis_demo.py
lightrag/: __init__.py  base.py  exceptions.py  lightrag.py  operate.py  prompt.py  utils.py  utils_graph.py
lightrag/api/: config.py  lightrag_server.py  run_with_gunicorn.py  utils_api.py
lightrag/api/routers/: document_routes.py  graph_routes.py  ollama_api.py  query_routes.py
lightrag/kg/: age_impl.py  chroma_impl.py  faiss_impl.py  gremlin_impl.py  json_doc_status_impl.py  json_kv_impl.py  milvus_impl.py  mongo_impl.py  nano_vector_db_impl.py  neo4j_impl.py  networkx_impl.py  postgres_impl.py  qdrant_impl.py  redis_impl.py  shared_storage.py  tidb_impl.py
lightrag/llm/: anthropic.py  azure_openai.py  bedrock.py  hf.py  llama_index_impl.py  lmdeploy.py  lollms.py  nvidia_openai.py  ollama.py  openai.py  siliconcloud.py  zhipu.py
reproduce/: Step_1_openai_compatible.py  Step_3.py  Step_3_openai_compatible.py
